--- a/style.css
+++ b/style.css
@@ -13,84 +13,21 @@ body {
   }
 
   .row { 
-    border-bottom: 1px solid black;
-    background-color: lightgrey;
-      
-      
+    border-bottom: 1px solid black;  
   }
 
-  .col {
-      padding: 0px;
+  .col, .col-1 {
+    padding: 2px;
   }
-  /* div {
-      border-style: solid;
-      border-color: red;
-      border-width: 1px;
-  }
-   */
-  /* textarea{
-    background: transparent;
-    border: none;
-    resize: none;
-    color: #000000;
-    border-left: 1px solid black;
-    padding: 10px;
-  }
-   */
-  /* .jumbotron {
-    text-align: center;
-    background-color: transparent;
-    color: black;
-    border-radius: 0;
-    border-bottom: 10px solid black;
-  } */
-  
-  /* .description{
-    white-space: pre-wrap;
-  }
-  
-  .time-block{
-    text-align: center;
-    border-radius: 15px;
-  }
-  
-  .row {
-    white-space: pre-wrap;
-    height: 80px;
-    border-top: 1px solid white;;
-  }
-  
-  .hour {
-    background-color: #ffffff;
-    color: #000000;
-    border-top: 1px dashed #000000;
-  }
-  
+
   .past {
-    background-color: #d3d3d3;
-    color: white;
+    background-color: lightgrey;
   }
-  
+
   .present {
-    background-color: #ff6961;
-    color: white;
+    background-color: tomato;
   }
-  
+
   .future {
-    background-color: #77dd77;
-    color: white;
+    background-color: lightgreen;
   }
-  
-  .saveBtn {
-    border-left: 1px solid black;
-    border-top-right-radius: 15px;
-    border-bottom-right-radius: 15px;
-    background-color: #06AED5;
-    color: white;
-  }
-  
-  .saveBtn i:hover {
-    font-size: 20px;
-    transition: all .3s ease-in-out;
-  } */
-  
